infrastructure/terraform/modules/alb_attachment/main.tf
resource "aws_lb_target_group" "this" {
  name        = "${var.env}-${var.name}-tg"
  port        = var.container_port
  protocol    = "HTTP"
  vpc_id      = var.vpc_id
  target_type = "ip"

  health_check {
    enabled             = true
    healthy_threshold   = 2
    interval            = 30
    matcher             = "200"
    path                = var.health_check_path
    port                = "traffic-port"
    protocol            = "HTTP"
    timeout             = 15
    unhealthy_threshold = 2
  }
}

resource "aws_lb_listener_certificate" "this" {
  listener_arn    = var.listener_arn
  certificate_arn = var.certificate_arn
}

resource "aws_lb_listener_rule" "this" {
  listener_arn = var.listener_arn
  priority     = var.priority

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.this.arn
  }

  condition {
    host_header {
      values = concat([var.host_header], var.extra_host_headers)
    }
  }
}

resource "aws_lb_listener_certificate" "extra" {
  for_each        = { for idx, arn in var.extra_certificate_arns : tostring(idx) => arn }
  listener_arn    = var.listener_arn
  certificate_arn = each.value
}
